добавил страницу лабораторные работы, добавил ссылку на  viber

--- a/labs.html
+++ b/labs.html
@@ -10,9 +10,9 @@
 
   <script src="js/javascript.js" defer></script>
 
-  <title>matviu - Контакты</title>
+  <title>matviu - Лабы</title>
 </head>
-<body class="body-contacts container-fluid">
+<body class="body-labs container-fluid">
 
   <nav class="main-nav main-nav_closed">
     <div class="main-nav__avatar-container">
@@ -47,23 +47,21 @@
     <button class="main-nav__toggle" type="button"></button>
   </nav>
 
-  <main class="main contacts">
-    <h1 class="main__title">Мои контакты</h1>
+  <main class="main works">
+    <h1 class="main__title">Лабораторные работы</h1>
 
-    <ul class="contacts__list">
-      <li class="contacts__item contacts__item_closed">
-        <span>телефон</span>
-        <div>
-          <a href="tel:+79227052606">+7 (922) 705-26-06</a>
-          <a class="viber" href="viber://chat?number=79227052606">Viber</a>
-        </div>
-        <div></div>
-      </li>
-      <li class="contacts__item contacts__item_closed">
-        <span>почта</span>
-        <div>matvi.u@yandex.ru</div>
-      </li>
-    </ul>
+    <section class="works__gallery">
+
+      <figure class="work">
+        <figcaption class="work__title">JS Training-modules</figcaption>
+        <a href="https://matviu.github.io/training-modules/">
+          <picture>
+            <img class="work__img" src="img/labs/training-modules.jpg" alt="lab">
+          </picture>
+        </a>
+      </figure>
+
+    </section>
 
     <blockquote class="quote">
       Исполнительность человека славит.
